docs/api/qiskit/0.43/qiskit.circuit.library.GRX.mdx
---
title: GRX
description: API reference for qiskit.circuit.library.GRX
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.GRX
---

# GRX

<Class id="qiskit.circuit.library.GRX" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/generalized_gates/gr.py" signature="GRX(num_qubits, theta)">
  Bases: [`GR`](qiskit.circuit.library.GR "qiskit.circuit.library.generalized_gates.gr.GR")

  Global RX gate.

  **Circuit symbol:**

  ```python
       ┌──────────┐
  q_0: ┤0         ├
       │          │
  q_1: ┤1  GRX(ϴ) ├
       │          │
  q_2: ┤2         ├
       └──────────┘
  ```

  The global RX gate is native to atomic systems (ion traps, cold neutrals). The global RX can be applied to multiple qubits simultaneously.

  In the one-qubit case, this is equivalent to an RX(theta) operations, and is thus reduced to the RXGate. The global RX gate is a direct sum of RX operations on all individual qubits.

$$
GRX(\theta) = \exp(-i \sum_{i=1}^{n} X_i \theta/2)
$$

  **Expanded Circuit:**

  ![../\_images/qiskit-circuit-library-GRX-1.png](/images/api/qiskit/0.43/qiskit-circuit-library-GRX-1.png)

  Create a new Global RX (GRX) gate.

  **Parameters**

  *   **num\_qubits** (*int*) – number of qubits.
  *   **theta** (*float*) – rotation angle about x-axis

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.GRX.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.GRX.calibrations" name="calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.GRX.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.GRX.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.GRX.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.GRX.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.GRX.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.GRX.instances" name="instances" attributeValue="= 136" />

  ### layout

  <Attribute id="qiskit.circuit.library.GRX.layout" name="layout">
    Return any associated layout information anout the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.GRX.metadata" name="metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.GRX.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.GRX.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.GRX.num_parameters" name="num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.GRX.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.GRX.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.GRX.parameters" name="parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unituitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    ```

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.GRX.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.GRX.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>
</Class>

